# SteadierCom

./: .gitignore  LICENSE  Makefile  README.md  README.rst  output.tsv  pyproject.toml  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/steadiercom/: __init__.py  cli.py  steadiercom.py
tests/: __init__.py  test_steadiercom.py
