[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SteadierCom"
version = "0.1.5"
description = "Microbial community simulation."
readme = "README.rst"
authors = [
  {name = "Daniel Machado", email = "cdanielmachado@gmail.com"}
]
maintainers = [
  {name = "Daniel Machado", email = "cdanielmachado@gmail.com"}
]
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console', 
        'Intended Audience :: Science/Research',
        'Topic :: Scientific/Engineering :: Bio-Informatics',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'License :: OSI Approved :: Apache Software License',
]
license = {text = "Apache Software License 2.0"}
dependencies = [
  "reframed>=1.5.3",
  "pandas",
  "numpy"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.scripts]
steadiercom = "steadiercom.cli:main"


[project.urls]
homepage = "https://github.com/cdanielmachado/steadiercom"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

